solved Issue: the word Sport added to Home Page solution:     <h1 class="SportTitle">Sport</h1> I was wrapping a code like this with a <div></div> tag and some the css contents did not get applyed, however, it does not dit that div tag and the class has to be applyed to the(in this case) <h1></h1> directly. wrong code sample: <div class="SportTitle">     <h1>Sport</h1> </div> correct same code sample:     <h1 class="SportTitle">Sport</h1>

--- a/TestUsers/Content/myCss2.css
+++ b/TestUsers/Content/myCss2.css
@@ -1,3 +1,1 @@
-﻿div.SportTitle{
-    text-align: center;
-}
+﻿
